--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device=width, initial-scale=2.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Index.css" type="text/css">
+    <link rel="stylesheet" href="Index2.css" type="text/css">
     <title>Sea-creatures</title>
   </head>
 
