--- a/Index.html
+++ b/Index.html
@@ -67,6 +67,7 @@
         <button class="PURC">PURCHASE</button>
       </div>
     </div>
-    
+
+    <script src="Index.js"></script>
   </body>
 </html>
