--- a/Index.html
+++ b/Index.html
@@ -13,12 +13,14 @@
       <p>FUEGO<span>.</span></p>
       <ul class="sidebar">
         <li class="list-one0" onclick="hideSidebar()"><a><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="undefined"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-        <li class="list-one1" onclick="hideSidebar()"><a href="#home" data-nav-selection="home" id="nav">HOME</a></li>
-        <li class="list-two2" onclick="hideSidebar()"><a href="#about" data-nav-selection="about" id="nav2">ABOUT</a></li>
-        <li class="list-three3" onclick="hideSidebar()"><a href="#services" data-nav-selection="services" id="nav3">SERVICES</a></li>
-        <li class="list-fifth4" onclick="hideSidebar()"><a href="#contact" data-nav-selection="contact" id="nav9">CONTACT</a></li>
+        <li class="H1" onclick="hideSidebar()"><a href="#">HOME</a></li>
+        <li class="P2" onclick="hideSidebar()"><a href="#">PAGES</a></li>
+        <li class="G3" onclick="hideSidebar()"><a href="#">GALLERY</a></li>
+        <li class="B4"onclick="hideSidebar()"><a href="#">BLOG</a></li>
+        <li class="S5" onclick="hideSidebar()"><a href="#">SHOP</a></li>
+        <li class="E6" onclick="hideSidebar()"><a href="#">ELEMENTS</a></li>
       </ul>
-      <ul>
+      <ul class="ord">
         <li class="H"><a href="#">HOME</a></li>
         <li class="P"><a href="#">PAGES</a></li>
         <li class="G"><a href="#">GALLERY</a></li>
@@ -26,9 +28,9 @@
         <li class="S"><a href="#">SHOP</a></li>
         <li class="E"><a href="#">ELEMENTS</a></li>
       </ul>
-      <ul><li><svg width="20px" height="20px" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <ul><li class="menu" onclick="showSidebar()"><a href="#"><svg width="20px" height="20px" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M15 3.5H0M15 11.5H6M15 7.5H9" stroke="#000000"/>
-        </svg></li></ul>
+        </svg></a></li></ul>
     </header>
 
     <img id="Octopus" src="rb_348.png">
@@ -67,7 +69,7 @@
         <button class="PURC">PURCHASE</button>
       </div>
     </div>
-
+    
     <script src="Index.js"></script>
   </body>
 </html>
